Code enriched with some Java 17 features